--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="這是陳婷煒的第一個網站。" />
         <meta name="author" content="陳婷煒" />
-        <title>陳婷煒的個人網站！！</title>
+        <title>陳婷煒的個人網站</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -62,10 +62,10 @@
                             <div class="subheading mb-3">資訊傳播學系</div>
                             <div class="clairedivgrey">
                                 <h4 class="clairesmallh4">專案名稱：「我的第一個互動式個人品牌網站」</h4>
-                                <p class="text-dark">學生可以進行一個「互動式個人品牌網站」的專案，透過 HTML、CSS 和 JavaScript 製作個人網站，內容包含自我介紹、興趣、作品展示及基本互動功能（如主題切換、留言板）。此專案不僅能訓練網頁設計與程式基礎，還能結合媒體創作與視覺設計，適合建立自我品牌並培養跨領域能力。</p>
+                                <p class="text-dark">學生可以進行一個「互動式個人品牌網站」的專案，透過 HTML、CSS 和visul studio code製作個人網站，內容包含自我介紹、興趣、作品展示及基本互動功能（如主題切換、留言板）。此專案不僅能訓練網頁設計與程式基礎，還能結合媒體創作與視覺設計，適合建立自我品牌並培養跨領域能力。</p>
                             </div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2014 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2024 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
