--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
             <!-- contact-->
             <section class="resume-section clairecallmebg" id="contact">
                 <div class="resume-section-content clairecallmebgup">
-                    <h2 class="mb-5 text-white clairecenter">我的聯絡方式</h2>
-                    <h3 class="text-white clairecenter">馬上聯絡我！</h3>
+                    <h2 class="mb-5 text-white">我的聯絡方式</h2>
+                    <h3 class="text-white">馬上聯絡我！</h3>
                    <!-- <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
