--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         世新大學資傳系一年級學生
                         <a href="milly950814@gmail.com" class=clairelink>milly950814@gmail.com</a>
                     </div>
-                    <p class="lead mb-5 claireserif">我目前就讀於世新大學資訊傳播學系，對影像創作、設計與跨領域媒體表現充滿興趣。平時喜歡畫畫、彈吉他，也熱愛運動與旅行。曾參與國內外交流與多項比賽，喜歡挑戰、也樂於嘗試新事物。期待未來能結合興趣與專業，創造屬於自己的自由人生。</p>
+                    <p class="lead mb-5 claireserif">我目前就讀於<span class="clairehl">世新大學資訊傳播學系</span>，對影像創作、設計與跨領域媒體表現充滿興趣。平時喜歡畫畫、彈吉他，也熱愛運動與旅行。曾參與國內外交流與多項比賽，喜歡挑戰、也樂於嘗試新事物。期待未來能結合興趣與專業，創造屬於自己的自由人生。</p>
                 </div>
             </section>
             <hr class="m-0" />
