--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         世新大學資傳系一年級學生
                         <a href="milly950814@gmail.com" class=clairelink>milly950814@gmail.com</a>
                     </div>
-                    <p class="lead mb-5 claireserif">我目前就讀於<span class="clairehl">世新大學資訊傳播學系</span>，對影像創作、設計與跨領域媒體表現充滿興趣。平時喜歡畫畫、彈吉他，也熱愛運動與旅行。曾參與國內外交流與多項比賽，喜歡挑戰、也樂於嘗試新事物。期待未來能結合興趣與專業，創造屬於自己的自由人生。</p>
+                    <p class="lead mb-5 claireserif">我目前就讀於世新大學資訊傳播學系，對影像創作、設計與跨領域媒體表現充滿興趣。平時喜歡畫畫、彈吉他，也熱愛運動與旅行。曾參與國內外交流與多項比賽，喜歡挑戰、也樂於嘗試新事物。期待未來能結合興趣與專業，創造屬於自己的自由人生。</p>
                 </div>
             </section>
             <hr class="m-0" />
@@ -64,7 +64,7 @@
                             <h3 class="mb-0">世新大學 <a href="https://collego.edu.tw/Highschool/DepartmentIntro?dept_id=047008" target="_blank" class="clairelink"><i class="fa-solid fa-arrow-up-right-from-square"></i></a></h3>
                             <div class="subheading mb-3">資訊傳播學系</div>
                             <div class="clairedivgrey">
-                                <h4 class="clairesmallh4">專案名稱：「我的第一個互動式個人品牌網站」</h4>
+                                <h4 class="clairesmallh4">專案名稱：<span class="clairehl">「我的第一個互動式個人品牌網站」</span></h4>
                                 <p class="text-dark">學生可以進行一個「互動式個人品牌網站」的專案，透過 HTML、CSS 和visul studio code製作個人網站，內容包含自我介紹、興趣、作品展示及基本互動功能（如主題切換、留言板）。此專案不僅能訓練網頁設計與程式基礎，還能結合媒體創作與視覺設計，適合建立自我品牌並培養跨領域能力。</p>
                             </div>
                         </div>
