--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
                         <a class="social-icon" href="https://www.facebook.com/profile.php?id=100004018580624" target="_blank"><i class="fab fa-facebook-f"></i></a>
                         <a class="social-icon" href="mailto:milly950814@gmail.com"><i class="fa-solid fa-envelope"></i></a>
                     </div>
+                    <a href="#about" class="mb-5 text-white" class="text-white">Back to top</a>
                 </div>
             </section>
         </div>
