--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                         <a class="social-icon" href="https://www.threads.net/@claire0814_" target="blank"><i class="fa-solid fa-at"></i></a>
                         <a class="social-icon" href="https://www.facebook.com/profile.php?id=100004018580624" target="_blank"><i class="fab fa-facebook-f"></i></a>
                         <a class="social-icon" href="mailto:milly950814@gmail.com"><i class="fa-solid fa-envelope"></i></a>
-                        <a href="#about" class="mb-5 text-white" class="text-white">Back to top</a>
+                        <a href="#about" class="mb-5 text-white">Back to top</a>
                     </div>
                 </div>
             </section>
