--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             <div class="subheading mb-3">資訊傳播學系</div>
                             <div class="clairedivgrey">
                                 <h4 class="clairesmallh4">專案名稱：「我的第一個互動式個人品牌網站」</h4>
-                                <p class="text-dark">學生可以進行一個<span class="clairehl">「互動式個人品牌網站」</span>的專案，透過 HTML、CSS 和visul studio code製作個人網站，內容包含自我介紹、興趣、作品展示及基本互動功能（如主題切換、留言板）。此專案不僅能訓練網頁設計與程式基礎，還能結合媒體創作與視覺設計，適合建立自我品牌並培養跨領域能力。</p>
+                                <p class="text-dark">學生可以進行一個<span class="clairehl">「互動式個人品牌網站」</span>的專案，透過 HTML、CSS 和visul studio code製作個人網站，內容包含自我介紹、興趣、作品展示。此專案不僅能訓練網頁設計與程式基礎，還能結合媒體創作與視覺設計，適合建立自我品牌並培養跨領域能力。</p>
                             </div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2024 - Present</span></div>
