--- a/index.html
+++ b/index.html
@@ -176,24 +176,26 @@
                         <table class="table table-striped table-hover">
                     <div class="subheading mb-3">影劇排行</div>
                             <tr class="table-danger">
-                                <th>順序</th>
-                                <th>證照名稱</th>
-                                <th>取得日起</th>
+                                <th>名次</th>
+                                <th>影劇名稱</th>
+                                <th>觀看平台</th>
                             </tr>
                             <tr>
-                                <td>01</td>
-                                <td>多益金色證書</td>
-                                <td>2045</td>
+                                <td>🥇</td>
+                                <td>神盾局特工</td>
+                                <td>Disney+
+                                </td>
                             </tr>
                             <tr>
-                                <td>02</td>
-                                <td>google Analyticsㄑㄨㄛ</td>
-                                <td>2019</td>
+                                <td>🥈</td>
+                                <td>哈利波特</td>
+                                <td>HBO
+                                </td>
                             </tr>
                             <tr>
-                                <td>03</td>
-                                <td>我的天</td>
-                                <td>2045</td>
+                                <td>🥉</td>
+                                <td>怪奇物語</td>
+                                <td>Netflix</td>
                             </tr>
                         </table>
                       </div>
