--- a/index.html
+++ b/index.html
@@ -134,13 +134,10 @@
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <div class="card-group">
                         <div class="card">
-                          <img src="/assets/photo/444.jpg" class="card-img-top" alt="圖畫">
+                            <a href="assets/photo/444.jpg" target="_blank"><img src="/assets/photo/444.jpg" class="card-img-top" alt="圖畫">
                           <div class="card-body">
                             <h5 class="card-title">畫畫</h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                          </div>
-                          <div class="card-footer">
-                            <small class="text-muted">Last updated 3 mins ago</small>
                           </div>
                         </div>
                         <div class="card">
@@ -149,28 +146,19 @@
                             <h5 class="card-title">彈吉他</h5>
                             <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                           </div>
-                          <div class="card-footer">
-                            <small class="text-muted">Last updated 3 mins ago</small>
-                          </div>
                         </div>
                         <div class="card">
-                          <img src="/assets/photo/03.JPG" class="card-img-top" alt="...">
+                            <a href="assets/photo/007.jpg" target="_blank"> <img src="/assets/photo/007.jpg" class="card-img-top" alt="空手道比賽">
                           <div class="card-body">
                             <h5 class="card-title">運動</h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                           </div>
-                          <div class="card-footer">
-                            <small class="text-muted">Last updated 3 mins ago</small>
-                          </div>
                         </div>
                         <div class="card">
-                            <img src="/assets/photo/01.JPG" class="card-img-top" alt="...">
+                            <a href="assets/photo/222.jpg" target="_blank"></a><img src="/assets/photo/222.jpg" class="card-img-top" alt="芬蘭騎馬">
                             <div class="card-body">
                               <h5 class="card-title">旅遊</h5>
                               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                            </div>
-                            <div class="card-footer">
-                              <small class="text-muted">Last updated 3 mins ago</small>
                             </div>
                           </div>
                         <table class="table table-striped table-hover">
