--- a/index.html
+++ b/index.html
@@ -162,7 +162,9 @@
                             </div>
                           </div>
                         <table class="table table-striped table-hover">
-                        <div class="subheading mb-3">影劇排行</div>
+                         <div class="center-title">
+                                <h3>影劇排行</h3>
+                              </div>
                             <tr class="table-danger">
                                 <th>名次</th>
                                 <th>影劇名稱</th>
