--- a/index.html
+++ b/index.html
@@ -131,40 +131,39 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">興趣愛好</h2>
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
                     <div class="card-group">
                         <div class="card">
                             <a href="assets/photo/444.jpg" target="_blank"><img src="/assets/photo/444.jpg" class="card-img-top" alt="圖畫">
                           <div class="card-body">
                             <h5 class="card-title">畫畫</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <p class="card-text"></p>
                           </div>
                         </div>
                         <div class="card">
-                          <img src="/assets/photo/02.JPG" class="card-img-top" alt="...">
+                            <a href="assets/photo/555.jpg" target="_blank"><img src="/assets/photo/555.jpg" class="card-img-top" alt="吉他">
                           <div class="card-body">
                             <h5 class="card-title">彈吉他</h5>
-                            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                            <p class="card-text"></p>
                           </div>
                         </div>
                         <div class="card">
                             <a href="assets/photo/007.jpg" target="_blank"> <img src="/assets/photo/007.jpg" class="card-img-top" alt="空手道比賽">
                           <div class="card-body">
                             <h5 class="card-title">運動</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                            <p class="card-text"></p>
                           </div>
                         </div>
                         <div class="card">
                             <a href="assets/photo/222.jpg" target="_blank"></a><img src="/assets/photo/222.jpg" class="card-img-top" alt="芬蘭騎馬">
                             <div class="card-body">
                               <h5 class="card-title">旅遊</h5>
-                              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                              <p class="card-text"></p>
                             </div>
                           </div>
+                          <div class="center-title">
+                            <h3>影劇排行</h3>
+                          </div>
                         <table class="table table-striped table-hover">
-                         <div class="center-title">
-                                <h3>影劇排行</h3>
-                              </div>
                             <tr class="table-danger">
                                 <th>名次</th>
                                 <th>影劇名稱</th>
