--- a/index.html
+++ b/index.html
@@ -169,19 +169,19 @@
                             </tr>
                             <tr>
                                 <td>🥇</td>
-                                <td>神盾局特工</td>
+                                <td>神盾局特工 Agents Of Shield</td>
                                 <td>Disney+
                                 </td>
                             </tr>
                             <tr>
                                 <td>🥈</td>
-                                <td>哈利波特</td>
+                                <td>哈利波特 Harry Potter</td>
                                 <td>HBO
                                 </td>
                             </tr>
                             <tr>
                                 <td>🥉</td>
-                                <td>怪奇物語</td>
+                                <td>怪奇物語 Sanger Things</td>
                                 <td>Netflix</td>
                             </tr>
                         </table>
