--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                               <p class="card-text"></p>
                             </div>
                           </div>
-                        <h3 style="text-align: center; margin-top: 30px;">影劇排行</h3>
+                        <h3 class="table-title">影劇排行</h3>
                         <table class="table table-striped table-hover">
                             <tr class="table-danger">
                                 <th>名次</th>
