--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                         </div>
                         <div class="card">
                             <a href="assets/photo/007.jpg" target="_blank"> <img src="/assets/photo/007.jpg" class="card-img-top" alt="空手道比賽">
-                          <div class="card-body">
+                         <div class="card-body">
                             <h5 class="card-title">運動</h5>
                             <p class="card-text"></p>
                           </div>
@@ -159,8 +159,9 @@
                               <h5 class="card-title">旅遊</h5>
                               <p class="card-text"></p>
                             </div>
-                          </div>
-                        <h3 class="table-title">影劇排行</h3>
+                        </div>
+
+                        <h3 style="text-align: center; margin-top: 40px;">影劇排行</h3>  
                         <table class="table table-striped table-hover">
                             <tr class="table-danger">
                                 <th>名次</th>
