--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">關於阿煒</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#school">學習經歷</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#work">工作經歷</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">興趣愛好</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Certifications">我的證照</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#daily">生活日常</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">聯絡方式</a></li>
                 </ul>
@@ -128,7 +128,7 @@
             </section>
             <hr class="m-0" />
             <!-- interests-->
-            <section class="resume-section" id="interests">
+            <section class="resume-section" id="Certifications">
                 <div class="resume-section-content">
                     <h2 class="mb-5">興趣愛好</h2>
                     <div class="card-group">
@@ -205,6 +205,19 @@
                     <a href="assets/photo/008.jpg" target="_blank"><img src="/assets/photo/008.jpg" alt="阿煒的照片" width="30%" class="clairecrop"></a>
                     <a href="assets/photo/09.jpg" target="_blank"><img src="/assets/photo/09.jpg" alt="阿煒的照片" width="30%" class="clairecrop"></a>
                 </div>
+                <h2>🎨 我的畫作展示</h2>
+            <div class="slider">
+                <div class="slides">
+                    <img src="assets/photo/444.jpg" alt="畫1">
+                    <img src="assets/photo/777.jpg" alt="畫2">
+                    <img src="assets/photo/888.jpg" alt="畫3">
+                    <img src="assets/photo/102.jpg" alt="畫4">
+                    <img src="assets/photo/999.jpg" alt="畫5">
+                    <img src="assets/photo/444.jpg" alt="畫6">
+                    <img src="assets/photo/101.jpg" alt="畫7">
+                    <img src="assets/photo/100.jpg" alt="畫8">
+                </div>
+            </div>
             </section>
             <hr class="m-0" />
             <!-- contact-->
