--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                     <h2 class="mb-5">生活日常</h2>
                     <a href="assets/photo/001.jpg" target="_blank"><img src="/assets/photo/001.jpg" alt="阿煒的照片" width="30%" class="clairecrop"></a>
                     <a href="assets/photo/111.jpg" target="_blank"><img src="/assets/photo/111.jpg" alt="阿煒的照片" width="30%" class="clairecrop"></a>
-                    <a href="assets/photo/003.jpg" target="_blank"><img src="/assets/photo/003.jpg" alt="阿煒的照片" width="30%" class="clairecrop"></a>
+                    <a href="assets/photo/222.jpg" target="_blank"><img src="/assets/photo/222.jpg" alt="阿煒的照片" width="30%" class="clairecrop"></a>
                     <a href="assets/photo/004.jpg" target="_blank"><img src="/assets/photo/004.jpg" alt="阿煒的照片" width="30%" class="clairecrop"></a>
                     <a href="assets/photo/005.jpg" target="_blank"><img src="/assets/photo/005.jpg" alt="阿煒的照片" width="30%" class="clairecrop"></a>
                     <a href="assets/photo/06.jpg" target="_blank"><img src="/assets/photo/06.jpg" alt="阿煒的照片" width="30%" class="clairecrop"></a>
@@ -206,8 +206,7 @@
                     <a href="assets/photo/09.jpg" target="_blank"><img src="/assets/photo/09.jpg" alt="阿煒的照片" width="30%" class="clairecrop"></a>
                 </div>
                 <h2>🎨 我的畫作展示</h2>
-            <div class="slider">
-                <div class="slides">
+                <div class="art-gallery">
                     <img src="assets/photo/444.jpg" alt="畫1">
                     <img src="assets/photo/777.jpg" alt="畫2">
                     <img src="assets/photo/888.jpg" alt="畫3">
@@ -217,7 +216,6 @@
                     <img src="assets/photo/101.jpg" alt="畫7">
                     <img src="assets/photo/100.jpg" alt="畫8">
                 </div>
-            </div>
             </section>
             <hr class="m-0" />
             <!-- contact-->
