--- a/index.html
+++ b/index.html
@@ -206,13 +206,12 @@
                     <a href="assets/photo/09.jpg" target="_blank"><img src="/assets/photo/09.jpg" alt="阿煒的照片" width="30%" class="clairecrop"></a>
                 </div>
                 <h2>🎨 我的畫作展示</h2>
-                <div class="art-gallery">
+                <div class="art-stack">
                     <img src="assets/photo/444.jpg" alt="畫1">
                     <img src="assets/photo/777.jpg" alt="畫2">
                     <img src="assets/photo/888.jpg" alt="畫3">
                     <img src="assets/photo/102.jpg" alt="畫4">
                     <img src="assets/photo/999.jpg" alt="畫5">
-                    <img src="assets/photo/444.jpg" alt="畫6">
                     <img src="assets/photo/101.jpg" alt="畫7">
                     <img src="assets/photo/100.jpg" alt="畫8">
                 </div>
