--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                     <a href="assets/photo/09.jpg" target="_blank"><img src="/assets/photo/09.jpg" alt="阿煒的照片" width="30%" class="clairecrop"></a>
                 </div>
                 <h2>🎨 我的畫作展示</h2>
-                <div class="art-stack">
+                <div class="art-gallery">
                     <img src="assets/photo/444.jpg" alt="畫1">
                     <img src="assets/photo/777.jpg" alt="畫2">
                     <img src="assets/photo/888.jpg" alt="畫3">
