--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">關於阿煒</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#school">學習經歷</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#work">工作經歷</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Certifications">我的證照</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Certifications">我的證書</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#daily">生活日常</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">聯絡方式</a></li>
                 </ul>
@@ -130,7 +130,7 @@
             <!-- interests-->
             <section class="resume-section" id="Certifications">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">興趣愛好</h2>
+                    <h2 class="mb-5">我的證書</h2>
                     <table class="table table-striped table-hover">
                         <tr class="table-danger">
                             <th>順序</th>
@@ -145,14 +145,14 @@
                         </tr>
                         <tr>
                             <td>2</td>
-                            <td>GEPT英檢中高級</td>
+                            <td>GEPT中高級英文檢定</td>
                             <td>2023
                             </td>
                         </tr>
                         <tr>
                             <td>3</td>
-                            <td>怪奇物語 Sanger Things</td>
-                            <td>Netflix</td>
+                            <td>高中畢業證書</td>
+                            <td>2024</td>
                         </tr>
                     </table>
                     <div class="card-group">
