--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                     <h2 class="mb-5">生活日常</h2>
                     <a href="assets/photo/001.jpg" target="_blank"><img src="/assets/photo/001.jpg" alt="阿煒的照片" width="30%" class="clairecrop"></a>
                     <a href="assets/photo/111.jpg" target="_blank"><img src="/assets/photo/111.jpg" alt="阿煒的照片" width="30%" class="clairecrop"></a>
-                    <a href="assets/photo/222.jpg" target="_blank"><img src="/assets/photo/222.jpg" alt="阿煒的照片" width="30%" class="clairecrop"></a>
+                    <a href="assets/photo/222.png" target="_blank"><img src="/assets/photo/222.png" alt="阿煒的照片" width="30%" class="clairecrop"></a>
                     <a href="assets/photo/004.jpg" target="_blank"><img src="/assets/photo/004.jpg" alt="阿煒的照片" width="30%" class="clairecrop"></a>
                     <a href="assets/photo/005.jpg" target="_blank"><img src="/assets/photo/005.jpg" alt="阿煒的照片" width="30%" class="clairecrop"></a>
                     <a href="assets/photo/06.jpg" target="_blank"><img src="/assets/photo/06.jpg" alt="阿煒的照片" width="30%" class="clairecrop"></a>
