--- a/index.html
+++ b/index.html
@@ -182,13 +182,12 @@
                           </div>
                         </div>
                         <div class="card">
-                            <a href="assets/photo/204.jpg" target="_blank"></a><img src="/assets/photo/204.jpg" class="card-img-top" alt="真言高中寒令營證書">
+                            <a href="assets/photo/204.jpg" target="_blank"><img src="/assets/photo/204.jpg" class="card-img-top" alt="真言高中寒令營證書">
                             <div class="card-body">
                               <h5 class="card-title">美國箴言高中國際交流證書</h5>
                               <p class="card-text">哦這個是我自己想去的，考完學測當天直飛芬蘭。有沒有交流不知道，倒是看到一堆帥哥。</p>
                             </div>
                         </div>
-                        
                       </div>
                 </div>
             </section>
