--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <!-- daily-->
             <section class="resume-section" id="daily">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">生活日常</h2>
+                    <h2 class="mb-5" text-decoration: none;>生活日常</h2>
                     <a href="assets/photo/001.jpg" target="_blank"><img src="/assets/photo/001.jpg" alt="阿煒的照片" width="30%" class="clairecrop"></a>
                     <a href="assets/photo/008.jpg" target="_blank"><img src="/assets/photo/008.jpg" alt="阿煒的照片" width="30%" class="clairecrop"></a>
                     <a href="assets/photo/222.jpg" target="_blank"><img src="/assets/photo/222.jpg" alt="阿煒的照片" width="30%" class="clairecrop"></a>
