--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                             <h3 class="mb-0">世新大學 <a href="https://collego.edu.tw/Highschool/DepartmentIntro?dept_id=047008" target="_blank" class="clairelink"><i class="fa-solid fa-arrow-up-right-from-square"></i></a></h3>
                             <div class="subheading mb-3">資訊傳播學系</div>
                             <div class="clairedivgrey">
-                                <h4 class="clairesmallh4">專案名稱：「我的第一個互動式個人品牌網站」</h4>
-                                <p class="text-dark">學生可以進行一個<span class="clairehl">「互動式個人品牌網站」</span>的專案，透過 HTML、CSS 和visul studio code製作個人網站，內容包含自我介紹、興趣、作品展示。此專案不僅能訓練網頁設計與程式基礎，還能結合媒體創作與視覺設計，適合建立自我品牌並培養跨領域能力。</p>
+                                <h4 class="clairesmallh4">課程名稱：「數位影音處理」</h4>
+                                <p class="text-dark">這堂課拍攝的作業主要是練習<span class="clairehl">鏡頭調度、燈光設計和現場收音</span>的整合運用，還有一些剪輯邏輯上的預先規劃。在整個流程中，包含了分鏡設計、場景安排以及現場拍攝的執行。雖然成品還在後製中，但透過這次的實作，希望能更熟練整體的影像敘事技巧。</p>
                             </div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2024 - Present</span></div>
@@ -73,7 +73,11 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">市立林園高中<a href="https://www.ly.kh.edu.tw/index.php?WebID=336" target="_blank" class="clairelink"><i class="fa-solid fa-arrow-up-right-from-square"></i></a></h3>
-                            <div class="subheading mb-3">國際專班升學班</div>
+                            <div class="subheading mb-3">國際專班</div>
+                            <div class="clairedivgrey">
+                                <h4 class="clairesmallh4">美國箴言高中寒令營</h4>
+                                <p class="text-dark">畢業前參加了一個芬蘭的寒令營，是國際專班跟美國箴言高中合作的計畫。也是我第一次自己出國，去當地的大學和高中<span class="clairehl">跟那邊的學生一起上課、生活，算是半學習半玩樂的行程。</span>從山上滑雪到農場騎馬，活動都超豐富而且還可以看到很多帥哥。整趟旅程中讓我學到很多，也更認識了自己，對我來說算是一種另類的畢旅</p>
+                            </div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2021 - june 2024</span></div>
                     </div>
@@ -102,24 +106,24 @@
                     <h2 class="mb-5">工作經驗</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">高中學聯會</h3>
-                            <div class="subheading mb-3">副會長</div>
+                            <h3 class="mb-0">TGI Friday餐廳員工</h3>
+                            <div class="subheading mb-3">外場服務生</div>
                             <ol class="list-group">
                                 <li class="list-group-item active">特色亮點</li>
-                                <li class="list-group-item">校慶＋各大校內外活動籌辦</li>
-                                <li class="list-group-item">與高校特約聯盟簽約</li>
+                                <li class="list-group-item">摔破過碗跟杯子</li>
+                                <li class="list-group-item">每天上班都想吃客人的飯</li>
                             </ol>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary"></span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">高中畢聯會</h3>
-                            <div class="subheading mb-3">幹部</div>
+                            <h3 class="mb-0">高中學聯會/畢聯會</h3>
+                            <div class="subheading mb-3">副會長</div>
                             <ol class="list-group">
                                 <li class="list-group-item active">特色亮點</li>
+                                <li class="list-group-item">校慶、球賽和各大校內外活動籌辦</li>
                                 <li class="list-group-item">畢業歌影片攝影＋編劇＋剪輯</li>
-                                <li class="list-group-item">畢業典禮籌辦</li>
                             </ol>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary"></span></div>
@@ -156,21 +160,21 @@
                     </table>
                     <div class="card-group">
                         <div class="card">
-                            <a href="assets/photo/201.jpg" target="_blank"><img src="/assets/photo/201.jpg" class="card-img-top" alt="黑帶照片">
+                            <a href="assets/photo/201.jpg" target="_blank"><img src="/assets/photo/201.jpg" class="card-img-top" alt="黑帶照片"></a>
                           <div class="card-body">
                             <h5 class="card-title">空手道一級證照</h5>
                             <p class="card-text">國中被教練逼著去考，也不知道怎麼過的。</p>
                           </div>
                         </div>
                         <div class="card">
-                            <a href="assets/photo/202.jpg" target="_blank"><img src="/assets/photo/202.jpg" class="card-img-top" alt="GEPT英文檢定證書">
+                            <a href="assets/photo/202.jpg" target="_blank"><img src="/assets/photo/202.jpg" class="card-img-top" alt="GEPT英文檢定證書"></a>
                           <div class="card-body">
                             <h5 class="card-title">全民英檢中高級證書</h5>
                             <p class="card-text">高中被老師逼著去考拿到的，說以後會很有用，但到現在還沒用過＠＠</p>
                           </div>
                         </div>
                         <div class="card">
-                            <a href="assets/photo/203.jpg" target="_blank"> <img src="/assets/photo/203.jpg" class="card-img-top" alt="國際青年培訓證書">
+                            <a href="assets/photo/203.jpg" target="_blank"> <img src="/assets/photo/203.jpg" class="card-img-top" alt="國際青年培訓證書"></a>
                          <div class="card-body">
                             <h5 class="card-title">國際青年培訓證書</h5>
                             <p class="card-text">高中暑假被老師逼著去實習，感覺也沒什麼用但聽著很厲害。</p>
@@ -183,7 +187,7 @@
             <!-- daily-->
             <section class="resume-section" id="daily">
                 <div class="resume-section-content">
-                    <h2 class="mb-5" text-decoration: none;>生活日常</h2>
+                    <h2 class="mb-5">生活日常</h2>
                     <a href="assets/photo/001.jpg" target="_blank"><img src="/assets/photo/001.jpg" alt="阿煒的照片" width="30%" class="clairecrop"></a>
                     <a href="assets/photo/008.jpg" target="_blank"><img src="/assets/photo/008.jpg" alt="阿煒的照片" width="30%" class="clairecrop"></a>
                     <a href="assets/photo/222.jpg" target="_blank"><img src="/assets/photo/222.jpg" alt="阿煒的照片" width="30%" class="clairecrop"></a>
