--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <hr class="m-0" />
             <!-- daily-->
             <section class="resume-section" id="daily">
-                <div class="resume-section-content">
+                <div class="resume-section-content" class="image-hover">
                     <h2 class="mb-5">生活日常</h2>
                     <a href="assets/photo/001.jpg" target="_blank"><img src="/assets/photo/001.jpg" alt="阿煒的照片" width="30%" class="clairecrop"></a>
                     <a href="assets/photo/008.jpg" target="_blank"><img src="/assets/photo/008.jpg" alt="阿煒的照片" width="30%" class="clairecrop"></a>
