--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                         <span class="text-primary">Claire</span>
                     </h1>
                     <div class="subheading mb-5">
-                        世新大學資傳系一年級學生
+                        愛吃又愛睡的大學生
                         <a href="milly950814@gmail.com" class=clairelink>milly950814@gmail.com</a>
                     </div>
-                    <p class="lead mb-5 claireserif">我目前就讀於世新大學資訊傳播學系，對影像創作、設計與跨領域媒體表現充滿興趣。平時喜歡畫畫、彈吉他，也熱愛運動與旅行。曾參與國內外交流與多項比賽，喜歡挑戰、也樂於嘗試新事物。期待未來能結合興趣與專業，創造屬於自己的自由人生。</p>
+                    <p class="lead mb-5 claireserif">目前就讀於世新大學資訊傳播學系，平常沒事喜歡畫畫、彈吉他，也愛看美劇和聽歌，偶爾會打打遊戲或找地方走走放風一下。運動和出去玩更是常常在計劃內，喜歡動也喜歡靜。對新事物也都很好奇，只要有機會就想試試看，希望未來能把喜歡的事情和專業結合起來，慢慢找到自己喜歡的生活方式。</p>
                 </div>
             </section>
             <hr class="m-0" />
@@ -186,7 +186,7 @@
             <hr class="m-0" />
             <!-- daily-->
             <section class="resume-section" id="daily">
-                <div class="resume-section-content" class="image-hover">
+                <div class="resume-section-content">
                     <h2 class="mb-5">生活日常</h2>
                     <a href="assets/photo/001.jpg" target="_blank"><img src="/assets/photo/001.jpg" alt="阿煒的照片" width="30%" class="clairecrop"></a>
                     <a href="assets/photo/008.jpg" target="_blank"><img src="/assets/photo/008.jpg" alt="阿煒的照片" width="30%" class="clairecrop"></a>
